Finally Added Comand Line args(Working)
Also Added a Side Form(Not Coded yet)
to insert HTML Frames

--- a/DuoEditor/DuoEditor.csproj
+++ b/DuoEditor/DuoEditor.csproj
@@ -82,6 +82,12 @@
     <Compile Include="Forms\SubForms\BarCodeForm1.Designer.cs">
       <DependentUpon>BarCodeForm1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\SubForms\FrameInserter.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\SubForms\FrameInserter.Designer.cs">
+      <DependentUpon>FrameInserter.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\SubForms\HeaderInserter.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -116,6 +122,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\SubForms\BarCodeForm1.resx">
       <DependentUpon>BarCodeForm1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\SubForms\FrameInserter.resx">
+      <DependentUpon>FrameInserter.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\SubForms\HeaderInserter.resx">
       <DependentUpon>HeaderInserter.cs</DependentUpon>
