--- a/DuoEditor/DuoEditor.csproj
+++ b/DuoEditor/DuoEditor.csproj
@@ -53,6 +53,9 @@
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="SplashScreen, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\SplashScreen.Winforms.1.0.0\lib\SplashScreen.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.DirectoryServices" />
@@ -70,6 +73,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\Sides\JsonWorkers.cs" />
     <Compile Include="Forms\MainChildForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -113,14 +117,21 @@
     <Compile Include="Forms\SubForms\ImageInserter.Designer.cs">
       <DependentUpon>ImageInserter.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\SubForms\LogVeiwer1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\SubForms\LogVeiwer1.Designer.cs">
+      <DependentUpon>LogVeiwer1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\SubForms\ParagraphInserter.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\SubForms\ParagraphInserter.Designer.cs">
       <DependentUpon>ParagraphInserter.cs</DependentUpon>
     </Compile>
+    <Compile Include="Classes\Sides\Logger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Classes\Sides\PublicVars.cs" />
+    <Compile Include="Classes\Sides\PublicFuncs.cs" />
     <EmbeddedResource Include="Forms\MainChildForm.resx">
       <DependentUpon>MainChildForm.cs</DependentUpon>
       <SubType>Designer</SubType>
@@ -184,12 +195,12 @@
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </COMReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Resources\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="FormatFactoryDuologoblackback.ico" />
     <Content Include="FormatFactoryDuologoNoBack.ico" />
+    <None Include="Resources\Untitled.png" />
+    <None Include="Resources\DuologoNoBack.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
