--- a/DuoEditor/packages.config
+++ b/DuoEditor/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net452" />
+  <package id="SplashScreen.Winforms" version="1.0.0" targetFramework="net452" />
   <package id="Zen.Barcode.Rendering.Framework" version="3.1.10729.1" targetFramework="net452" />
 </packages>
