Added LogVeiwer as a seprate program.
encrypted logs

--- a/DuoEditor/DuoEditor.csproj
+++ b/DuoEditor/DuoEditor.csproj
@@ -74,6 +74,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\Sides\Encrypt.cs" />
     <Compile Include="Classes\Sides\JsonWorkers.cs" />
     <Compile Include="Forms\MainChildForm.cs">
       <SubType>Form</SubType>
