--- a/DuoEditor/packages.config
+++ b/DuoEditor/packages.config
@@ -2,5 +2,7 @@
 <packages>
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net452" />
   <package id="SplashScreen.Winforms" version="1.0.0" targetFramework="net452" />
+  <package id="System.Linq" version="4.3.0" targetFramework="net472" />
+  <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net472" />
   <package id="Zen.Barcode.Rendering.Framework" version="3.1.10729.1" targetFramework="net452" />
 </packages>
