Changed Update Schema to 0.1.3
Bug Fixes + TreeView Added + Requester which is a program used to call CMD + NODE.

--- a/DuoEditor/DuoEditor.csproj
+++ b/DuoEditor/DuoEditor.csproj
@@ -234,6 +234,7 @@
   <ItemGroup>
     <Content Include="FormatFactoryDuologoblackback.ico" />
     <Content Include="FormatFactoryDuologoNoBack.ico" />
+    <None Include="Resources\Icon1.ico" />
     <None Include="Resources\Untitled.png" />
     <None Include="Resources\DuologoNoBack.png" />
   </ItemGroup>
