--- a/DuoEditor/packages.config
+++ b/DuoEditor/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ConsoleControl" version="1.2.1" targetFramework="net472" />
+  <package id="ConsoleControlAPI" version="1.2.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net452" />
   <package id="SplashScreen.Winforms" version="1.0.0" targetFramework="net452" />
   <package id="System.Linq" version="4.3.0" targetFramework="net472" />
